client/src/css/style.css
/* app shell CSS */
:root {
  --primary: #31a9e1;
  --gray: #ececec;
  --whitesmoke: #f5f5f5;
  --dark: #222;
  --monoaki: #272822;
  --navbar-height: 50px;
}

body {
  margin: 0;
  height: 100%;
  background-color: var(--monoaki);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
}
.CodeMirror { height: 100%; }
h1 {
  font-size: 22px;
}
#main {
  height:100%;
}
#navbar {
  height: var(--navbar-height);
  background-color: var(--primary);
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: white;
  font-size: 22px;
  font-weight: 550;
  letter-spacing: 0.9px;
}

.cm-wrap { height: 80%; border: 1px solid silver}
.cm-scroller { overflow: auto; }

.navbar-brand img {
  padding-top: 10px;
}

.loading-spinner {
  animation-duration: 0.75s;
  animation-iteration-count: infinite;
  animation-name: rotate-forever;
  animation-timing-function: linear;
  height: 100%;
  width: 100%;
  border: 3px solid var(--primary);
  border-right-color: transparent;
  border-radius: 50%;
}

.loading-container {

  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%; 
  /* calc(100vh - var(--navbar-height)); */
}

@keyframes rotate-forever {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.app-update {
  display: none;
  position: absolute;
  right: 10px;
}

.app-update.show {
  display: block;
}

.nav-btn {
  margin: 25px;
}

.btn {
  text-align: center;
  display: inline-block;
  padding: 0.5rem 1.2rem;
  margin: 0;
  text-decoration: none;
  font-size: 1rem;
  border-radius: 0.3rem;
  border: 1px solid transparent;
  outline: none;
  color: #1a1a1a;
  background-color: #aeaeae;
  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
}

.btn:hover {
  background-color: #cecece;
  cursor: pointer;
}

.btn.btn-squared {
  border-radius: 0;
}

.btn.btn-sm {
  font-size: 0.85rem;
  padding: 0.3rem 0.9rem;
}

.btn.btn-lg {
  font-size: 1.25rem;
  padding: 0.8rem 1.4rem;
}

.btn.btn-block {
  width: 100%;
  display: block;
  text-align: center;
}

.btn.btn-primary {
  background-color: #2d3e50;
  color: #d9e9e8;
}

.btn.btn-primary:hover {
  background-color: #57779a;
}

.btn.btn-danger {
  background-color: #e64c66;
  color: #ffffff;
}

.btn.btn-danger:hover {
  background-color: #ee8294;
}

.btn.btn-info {
  background-color: #1bbc9b;
  color: #ffffff;
}

.btn.btn-info:hover {
  background-color: #31e1bd;
}

.btn.btn-light {
  background-color: #d9e9e8;
  color: #1a1a1a;
}

.btn.btn-light:hover {
  background-color: #84b8b4;
}

.btn.btn-dark {
  background-color: #1a1a1a;
  color: #d9e9e8;
}

.btn.btn-dark:hover {
  background-color: #5f5f5f;
}

.btn.btn-white {
  background-color: #ffffff;
  color: #1a1a1a;
}

.btn.btn-white:hover {
  background-color: #cccccc;
}

.btn.btn-black {
  background-color: #000000;
  color: #ffffff;
}

.btn.btn-black:hover {
  background-color: #666666;
}

.btn.btn-link {
  background-color: #1b89bc;
  color: #ffffff;
}

.btn.btn-link:hover {
  background-color: #31a9e1;
}

@media only screen and (max-width: 600px) {
  .nav-btn {
    display: none;
  }

  .navbar-brand {
    display: none;
  }

  #navbar {
    justify-content: center;
  }

  h1 {
    font-size: 18px;
  }
}

